z-index bug fixed

--- a/src/components/UI/Modal.css
+++ b/src/components/UI/Modal.css
@@ -5,7 +5,7 @@
   justify-content: center;
   align-content: center;
   position: fixed;
-  z-index: 1;
+  z-index: 2;
   height: 100vh;
   width: 100%;
   background-color: #00000099;
